--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -1,10 +1,12 @@
-@comment{x-kbibtex-personnameformatting=<%l><, %f>}
-
 @book{Cox1961,
-	author = "Cox, R. T.",
-	publisher = "Johns Hopkins University Press",
-	title = "{The Algebra of Probable Inference}",
-	year = "1961"
+  title={Algebra of Probable Inference},
+  author={Cox, R.T.},
+  isbn={9780801869822},
+  lccn={61008039},
+  series={Algebra of Probable Inference},
+  url={http://books.google.com.br/books?id=dcNpAUU6ACgC},
+  year={2001},
+  publisher={Johns Hopkins University Press}
 }
 
 @article{Cox1946,
@@ -44,17 +46,16 @@
 	year = "1981"
 }
 
-@book{Nelsen1999,
-	address = "New York",
-	author = "Nelsen, Roger B.",
-	edition = "2nd",
-	isbn = "0387986235",
-	publisher = "Springer",
-	series = "{Springer Series in Statistics}",
-	title = "{An Introduction to Copulas}",
-	year = "2006"
+@book{Nelsen2006,
+  title={An Introduction to Copulas},
+  author={Nelsen, R.B.},
+  isbn={9780387286594},
+  lccn={05933254},
+  series={Springer Series in Statistics},
+  url={http://books.google.com.br/books?id=B3ONT5rBv0wC},
+  year={2006},
+  publisher={Springer}
 }
-
 @article{Sklar1959,
 	author = "Sklar, A.",
 	journal = "Publ. Inst. Statist. Univ. Paris",
@@ -86,14 +87,16 @@
 	volume = "16",
 	year = "2004"
 }
-
 @book{Jaynes2003,
-	address = "Cambridge",
-	author = "Jaynes, E. T.",
-	publisher = "Cambridge University Press",
-	title = "{Probability Theory: The Logic of Science}",
-	year = "2003"
+  title={Probability Theory: The Logic of Science},
+  author={Jaynes, E.T. and Bretthorst, G.L.},
+  isbn={9780521592710},
+  lccn={02071486},
+  url={http://books.google.com.br/books?id=tTN4HuUNXjgC},
+  year={2003},
+  publisher={Cambridge University Press}
 }
+
 
 @article{FT2009,
 	author = "Jones, S.",
@@ -171,21 +174,24 @@
 }
 
 @book{deWaal1990,
-	address = "Cambridge, Massachusetts",
-	author = "de Waal, Frans",
-	isbn = "0674659201",
-	publisher = "Harvard University Press",
-	title = "{Peacemaking among primates}",
-	year = "1990"
+  title={Peacemaking Among Primates},
+  author={DE WAAL, F.B.M. and de Waal, F.B.M.},
+  isbn={9780674659216},
+  lccn={88011067},
+  url={http://books.google.com.br/books?id=5at0TN8U6RMC},
+  year={1990},
+  publisher={Harvard University Press}
 }
 
 @book{deWaal2007,
-	address = "Baltimore",
-	author = "de Waal, Frans",
-	edition = "4nd",
-	publisher = "Johns Hopkins University Press",
-	title = "{Chimpanzee Politics: Power and Sex Among Apes}",
-	year = "2007"
+  title={Chimpanzee Politics: Power and Sex among Apes},
+  author={de Waal, F.},
+  isbn={9780801886560},
+  lccn={2007008511},
+  series={Chimpanzee Politics},
+  url={http://books.google.com.br/books?id=XsrhU2vV5PIC},
+  year={2007},
+  publisher={Johns Hopkins University Press}
 }
 
 @article{Currie2010,
@@ -222,12 +228,25 @@
 	year = "2008"
 }
 
+@book{Aczel1975,
+  title={On Measures of Information and Their Characterizations},
+  author={Acz{\'e}l, J. and Dar{\'o}czy, Z.},
+  isbn={9780120437603},
+  lccn={lc74017968},
+  series={Mathematics in science and engineering vol.115},
+  url={http://books.google.com.br/books?id=9Xsj7AWmV8UC},
+  year={1975},
+  publisher={Acad. Press}
+}
+
 @book{Dunbar2010book,
-	author = "Dunbar, Robin",
-	howpublished = "Hardcover",
-	publisher = "Faber and Faber",
-	title = "{How Many Friends Does One Person Need?: Dunbar's Number and Other Evolutionary Quirks}",
-	year = "2010"
+  title={How Many Friends Does One Person Need? Dunbar's Number and Other Evolutionary Quirks},
+  author={Dunbar, R. I. M.},
+  isbn={9780674057166},
+  lccn={2010029306},
+  url={http://books.google.com.br/books?id=W-kkeffNx5MC},
+  year={2010},
+  publisher={Harvard University Press}
 }
 
 @article{Calsaverini2009,
@@ -241,12 +260,40 @@
 	year = "2009"
 }
 
-@article{ACaticha2008,
+@Electronic{ACaticha2008,
 	author = "Caticha, Ariel",
 	howpublished = "arxiv:0808.0012",
 	journal = "arXiv:0808.0012",
 	note = "Invited lecture at the 28th International Workshop on Bayesian Inference and Maximum Entropy Methods in Science and Engineering (July 8-13, 2008, Boraceia Beach, Sao Paulo, Brazil)",
-	title = "{Lectures on Probability, Entropy, and Statistical Physics}"
-	url = "\url{http://arxiv.org/abs/0808.0012}"
+	title = "{Lectures on Probability, Entropy, and Statistical Physics}",
+	url = "{http://arxiv.org/abs/0808.0012}",
+	year = "2008"
 }
 
+@Electronic{ACaticha2009,
+	title = "Quantifying Rational Belief",
+	author = "Ariel Caticha",
+	year = "2009",
+	journal = "arXiv:0908.3212",
+	note = "Presented at the 29th International Workshop on Bayesian Inference and Maximum Entropy Methods in Science and Engineering (July 5-10, 2009, Oxford, Mississippi, USA.) In",
+	howpublished = "arxiv:0908.3212",
+	url = "{http://arxiv.org/abs/0908.3212}"
+}
+@Electronic{Goyal2010,
+	title = "Origin of Complex Quantum Amplitudes and Feynman's Rules",
+	author = "Philip Goyal and Kevin H. Knuth and John Skilling",
+	year = "2010",
+	journal = "arXiv:0907.0909",
+	howpublished = "arxiv:0907.0909",
+	url = "{http://arxiv.org/abs/0907.0909}"
+}
+
+@book{Tribus1969,
+  title={Rational descriptions, decisions, and designs},
+  author={Tribus, M.},
+  lccn={69017175},
+  series={Pergamon unified engineering series: engineering design section},
+  url={http://books.google.com.br/books?id=C4pRAAAAMAAJ},
+  year={1969},
+  publisher={Pergamon Press}
+}
